# jakmall_client

./: .gitignore  Cargo.toml  README.md  any.html
src/: g_categories.rs  g_category_page_count.rs  lib.rs
src/fetcher_models/: category.rs  mod.rs  product.rs  products.rs  spdt.rs
src/fetchers/: client_categories.rs  client_category_page_count.rs  client_products_at_page.rs  client_single_product.rs  find_description.rs  find_spdt.rs  find_title.rs  g_categories.rs  g_category_page_count.rs  g_products_at_page.rs  g_single_product.rs  mod.rs
src/utils/: last_bracket_finder.rs  macros.rs  mod.rs
tests/: client_categories.rs  client_category_page_count.rs  client_products_at_page.rs  client_single_product.rs
