[package]
name = "jakmall-rs"
version = "0.1.1"
edition = "2021"
description = "Jakmall data ekstraktor"

[lib]
name = "jakmall_rs"
path = "src/lib.rs"
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }

[dependencies]
anyhow = "1.0.71"
boa_engine = "0.17.0"
regex = { version = "1.9.1" }
reqwest = { version = "0.11.18", features = ["default", "gzip", "json"] }
scraper = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
